# treeline

./: .gitignore  README.md  bun.lockb  eslint.config.ts  instant.schema.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  sst-env.d.ts  sst.config.ts  tsconfig.json
.next/: routes-manifest.json  trace
.next/server/: server-reference-manifest.json
apps/extension/: manifest.js  package.json
apps/preprocess/: .env.example  constants.py  db.py  extract_fact_descriptor.py  kg.py  models.py  pdf_parser_server.py  preprocess.py  pyproject.toml  render.yaml  similarity_search.py  test.py  utils.py
apps/react-pdf-highlighter/: next.config.mjs  output.json  package-lock.json  package.json  tsconfig.json
apps/web/: .eslintrc.js  .prettierrc  middleware.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json
e2e/: page.spec.ts
example/: index.html  vite.config.ts
example/public/: site.webmanifest
example/src/: App.module.css  App.tsx  AvatarStack.module.css  AvatarStack.tsx  ChatSection.module.css  ChatSection.tsx  ChatView.module.css  ChatView.tsx  ClerkComponents.module.css  ClerkSignedInComponent.module.css  ClerkSignedInComponent.tsx  ClerkSignedOutComponent.module.css  ClerkSignedOutComponent.tsx  CreateDocumentModal.module.css  CreateDocumentModal.tsx  Cursor.module.css  Cursor.tsx  DocumentList.module.css  DocumentList.tsx  EditDocumentModal.module.css  EditDocumentModal.tsx  Emoji.module.css  Emoji.tsx  Modal.tsx  (+15 more)
infra/: api.ts  storage.ts
server/: bun.lockb  index.ts  package.json
src/: types.ts
(+282 files in other folders)
