[tool.poetry]
name = "my-space"
version = "0.1.0"
description = ""
authors = ["Eden Chan <edenchan717@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llmsherpa = "^0.1.4"
openai = "^1.14.3"
llama-index = "^0.10.25"
anthropic = "^0.21.3"
pymongo = "^4.6.3"
pydantic = "^2.6.4"
instructor = "^0.6.8"
graphviz = "^0.20.3"
chromadb = "^0.4.24"
llama-parse = "^0.4.0"
nest-asyncio = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
